<resources>
    <string name="app_name">Informatik InteressensCheck</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Informatik InteressensCheck</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="x_of_x_answered" formatted="false">%d von %d beantwortet</string>
    <string name="hello_user" formatted="false">Hallo %s %s</string>
    <string name="signing_in">Anmeldung wird durchgeführt</string>
    <string name="auth_error">Authentifizierungsfehler</string>
    <string name="OK">OK</string>
    <string name="error_during_logout">Ein Fehler bei der Abmeldung ist aufgetreten!</string>
    <string name="title_overview">Übersicht</string>
    <string name="start_a_quiz">Ein Quiz starten</string>
    <string name="show_quiz_results">Quizergebnisse ansehen</string>
    <string name="show_introduction">Einführung ansehen</string>
    <string name="back_to_questiongroups">Zu den Fragengruppen</string>
    <string name="next_question">Nächste Frage</string>
    <string name="previous_question">Vorige Frage</string>
    <string name="quiz_submition">Quizabgabe</string>
    <string name="quiz_submitting">Das Quiz wird nun abgegeben...</string>
    <string name="error_quiz_submit_title">Fehler bei der Abgabe</string>
    <string name="error_quiz_submit">"Es ist ein Fehler bei der Abgabe aufgetreten!"</string>
    <string name="quiz_starting_title">Starten des Quizzes</string>
    <string name="quiz_starting">Quiz wird gestartet</string>
    <string name="exceeded_time">Überschrittene Zeit:</string>
    <string name="quiz_cancelation">Quizabbruch</string>
    <string name="do_you_want_to_cancel_the_quiz">Willst du das Quiz wirklich abbrechen? Deine Antworten gehen dabei verloren.</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="quizzes">Quizze</string>
    <string name="language_selection">Sprachauswahl</string>
    <string name="error">Fehler</string>
    <string name="quiz_not_existing">Dieses Quiz existiert nicht mehr!</string>
    <string name="details">Details</string>
    <string name="information">Information</string>
    <string name="hour">%d Stunde</string>
    <string name="hours">%d Stunden</string>
    <string name="minute">%d Minute</string>
    <string name="minutes">%d Minuten</string>
    <string name="second">%d Sekunde</string>
    <string name="seconds">%d Sekunden</string>
    <string name="questions">Fragen</string>
    <string name="result_time" formatted="false">%s (Vorgabe: %s)</string>
    <string name="quiz_success">Quiz geschafft :)</string>
    <string name="quiz_fail">Leider nicht geschafft :(</string>
    <string name="quiz_results">Quizergebnisse</string>
    <string name="account_settings">Kontoeinstellungen</string>
    <string name="switch_user">Benutzer wechseln</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="forgot_password">Passwort vergessen</string>
    <string name="sign_up">Registrieren</string>
    <string name="sign_in">Anmelden</string>
    <string name="question_groups">Fragengruppen</string>
    <string name="submit_quiz">Abgeben</string>
    <string name="start_quiz">Quiz starten</string>
    <string name="time">Zeit:</string>
    <string name="pass_percent">Prozent für ein positives Quiz:</string>
    <string name="time_needed">Zeit benötigt:</string>
    <string name="reached_percentage">Erreichte Prozentzahl:</string>
    <string name="date_time">Datum, Uhrzeit:</string>
    <string name="begin_with_questions">Mit den Fragen beginnen</string>
    <string name="choose_a_question_group">Wähle eine Fragengruppe aus, welche du durchführen möchtest:</string>
    <string name="no_questiongroups_available">Dieses Quiz hat keine Fragengruppen</string>
    <string name="no_quizzes_available">Für diese Kategorie gibt es keine Quizze</string>
    <string name="show_questions">Fragen ansehen</string>
    <string name="show_more_information">mehr Informationen anzeigen</string>
    <string name="hide_information">Informationen verstecken</string>
    <string name="oops_server_error">Ooops.. Da ist etwas schief gelaufen! Es scheint so als ob auf unseren Servern zurzeit etwas nicht funktioniert. Bitte kontaktiere uns über die IIC-Webseite, falls dieser Fehler in 5 Minuten noch immer erscheint. Vielen Dank für dein Verständnis!</string>
    <string name="network_error">Es konnte keine Verbindung mit den IIC-Servern aufgebaut werden. Möglicherweise bist du nicht mit dem Internet verbunden. Die App wurde in den Offline-Modus geschalten. Du kannst sie trotzdem mit eingeschränkten Funktionen verwenden, um z.B.: deine Quizergebnisse anzusehen. Sobald du mit dem Internet verbunden bist, steht dir wieder die volle Funktionalität der App zur Verfügung.</string>
    <string name="unknown_error">Ein unbekannter Fehler ist aufgetreten! Versuche diese Aktion in 5 Minuten nochmals auszuführen. Falls dieser Fehler erneut erscheint, kontaktiere bitte unsere Entwickler über die IIC-Webseite. Vielen Dank für dein Verständnis!</string>
    <string name="function_currently_not_available">Diese Funktion ist zurzeit nicht verfügbar! %s</string>
    <string name="auth_error_relogin">Die Authentifizierung ist fehlgeschlagen! Bitte melde dich neu an.</string>
    <string name="an_error_occurred">Ein Fehler ist aufgetreten</string>
    <string name="no_quiz_results">Du hast noch keine Quizze absolviert</string>
    <string name="offline_mode_no_quizzes_available">Sie befinden sich zurzeit im Offline-Modus. Aus diesem Grund können keine Quizze geladen werden.</string>
    <string name="offline_mode_no_quizresults_available">Sie befinden sich zurzeit im Offline-Modus. Aus diesem Grund können keine Quizergebnisse geladen werden.</string>
    <string name="short_description">Kurzbeschreibung:</string>
    <string name="no_further_information_available">Es sind keine näheren Informationen verfügbar</string>
    <string name="show_solution">Lösung anzeigen</string>
    <string name="hide_solution">Lösung verstecken</string>
    <string name="solution">Lösung</string>
    <string name="save">Speichern</string>
    <string name="solutions_for_question">Für diese Frage gibt es folgende richtige Lösungen:</string>
    <string name="title_activity_register">Registrierung</string>
    <string name="pwd1_not_matching_pwd2">Dein Passwort stimmt nicht mit dem wiederholten Passwort überein!</string>
    <string name="change_password">Passwort ändern</string>
    <string name="cancel">Abbrechen</string>
    <string name="current_pwd_wrong">Dein aktuelles Passwort ist falsch! Bitte gib es erneut ein.</string>
    <string name="refreshing_user_data">Aktualisieren der Benutzerdaten</string>
    <string name="username_pwd_wrong">Die Kombination aus Benutzername und Passwort ist ungültig! Bitte probiere es erneut.</string>
    <string name="plz_must_be_a_number">Die Postleitzahl muss eine Zahl sein und darf keine anderen Zeichen enthalten!</string>
    <string name="select_no_class">keine Klasse auswählen</string>
    <string name="reset_password">Passwort zurücksetzen</string>
    <string name="email">E-Mail Adresse</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="password_min_6_chars">Passwort (min. 6 Zeichen)</string>
    <string name="password_again">Passwort wiederholen</string>
    <string name="school">Schule</string>
    <string name="choose_school_optional">Schule auswählen (optional)</string>
    <string name="school_class">Klasse</string>
    <string name="language">Sprache</string>
    <string name="country">Land</string>
    <string name="street">Straße</string>
    <string name="housenumber">Hausnummer</string>
    <string name="plz">PLZ</string>
    <string name="village">Ort</string>
    <string name="password_is_resetting">Passwort wird zurückgesetzt</string>
    <string name="title_activity_license">Lizenzen</string>
    <string name="licenses">Lizenzen</string>
    <string name="congratulations_certificate">Gratulation! Du hast ein Zertifikat erhalten. Zertifikat anzeigen</string>
    <string name="quiz_loaded_pause">Das Quiz wurde erfolgreich geladen. Tippe auf Quiz starten um das Quiz zu starten.</string>
    <string name="cancel_quiz">Quiz abbrechen</string>

</resources>
