<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="at.ac.htlstp.app.iic.ui.fragment.AccountFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="at.ac.htlstp.app.iic.model.User" />

        <variable
            name="accountFragment"
            type="at.ac.htlstp.app.iic.ui.fragment.AccountFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_above="@+id/actionButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.usernameWatcher}"
                        android:enabled="@{accountFragment.user_id == -1 ? true : false}"
                        android:hint="@string/username"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.UserName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.firstNameWatcher}"
                        android:hint="@string/firstname"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.FirstName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.lastNameWatcher}"
                        android:hint="@string/lastname"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.LastName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.emailWatcher}"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.EMail}" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{accountFragment.user_id == -1 ? View.VISIBLE : View.GONE}">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:addTextChangedListener="@{accountFragment.password1Watcher}"
                            android:hint="@string/password_min_6_chars"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:addTextChangedListener="@{accountFragment.password2Watcher}"
                            android:hint="@string/password_again"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/school"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/selectSchoolButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/colorPrimary"
                        android:text="@string/choose_school_optional"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/school_class"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/addClassButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/colorPrimary"
                        android:text="neue Klasse hinzufügen"
                        android:textColor="@android:color/white" />

                    <Spinner
                        android:id="@+id/classSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/language"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/country"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.streetWatcher}"
                        android:hint="@string/street"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.street}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.housenumberWatcher}"
                        android:hint="@string/housenumber"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.housenumber}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.pLZWatcher}"
                        android:hint="@string/plz"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{Integer.toString(user.PLZ)}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{accountFragment.villageWatcher}"
                        android:hint="@string/village"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.village}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/colorPrimary"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white"
                    android:visibility="@{accountFragment.user_id == -1 ? View.GONE : View.VISIBLE}" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/actionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            app:backgroundTint="@color/colorPrimary"
            android:text="@{accountFragment.user_id == -1 ? @string/sign_up : @string/save}"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</layout>
