<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="20dp"
            tools:context="at.ac.htlstp.app.iic.ui.activity.LoginActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/iic_logo_text" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageView"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_password_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:padding="5dp"
                        android:singleLine="false"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:singleLine="false"
                            android:text="@string/sign_up"
                            android:textColor="@color/colorPrimary" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:text="@string/sign_in"
                            android:textColor="@android:color/white"
                            app:backgroundTint="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>