<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigationQuizLayout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/questionContainerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark">

                <at.alexnavratil.navhelper.web.ReadabilityWebView
                    android:id="@+id/questionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/answerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                    <Button
                        android:id="@+id/showSolutionButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_solution"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/navigationQuizLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnPreviousQuestion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/previous_question"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/questionNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/next_question"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>